--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -115,3 +115,37 @@ jobs:
         with:
           name: byedpi-${{ matrix.arch }}-w64
           path: byedpi-*.zip
+
+release:Add commentMore actions
+    needs: [ build-linux, build-windows, build-cygwin ]
+    permissions:
+      contents: write
+    env:
+      tag_name: latest
+    runs-on: ubuntu-latest
+    steps:
+      - name: Download artifacts
+        uses: actions/download-artifact@v4
+
+      - name: GH
+        env:
+          REPO: 'hufrea/byedpi'
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          gh release delete ${{ env.tag_name }} --cleanup-tag -y -R ${{ github.repository }} || true
+          echo "DATE=$(gh api repos/$REPO/commits/main --jq '.commit.committer.date' | date -f - +%Y%m%d)" >> $GITHUB_ENV
+          echo "SHA_SHORT=$(gh api repos/$REPO/commits/main --jq '.sha[:7]')" >> $GITHUB_ENV
+      - name: Upload release assets
+        uses: softprops/action-gh-release@v2
+        with:
+          fail_on_unmatched_files: true
+          prerelease: false
+          draft: false
+          tag_name: ${{ env.tag_name }}
+          name: ${{ env.DATE }}
+          body: |
+            * Commit: hufrea/byedpi@${{ env.SHA_SHORT }}
+          target_commitish : main
+          files: |
+            ./**/byedpi-*.tar.gz
+            ./**/byedpi-*.zip
