--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -116,8 +116,43 @@ jobs:
           name: byedpi-${{ matrix.arch }}-w64
           path: byedpi-*.zip
 
+  build-cygwin:
+    name: Cygwin ${{ matrix.arch }}
+    runs-on: windows-latest
+    strategy:
+      matrix:
+        arch: [ x86_64, x86 ]
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          ref: main
+
+      - name: Set up Cygwin
+        uses: cygwin/cygwin-install-action@v4
+        with:
+          platform: ${{ matrix.arch }}
+          site: ${{ matrix.arch == 'x86_64' && 'http://ctm.crouchingtigerhiddenfruitbat.org/pub/cygwin/circa/64bit/2016/08/30/104235' || 'http://ctm.crouchingtigerhiddenfruitbat.org/pub/cygwin/circa/2016/08/30/104223' }}
+          check-sig: 'false'
+          packages: >-
+            gcc-core
+            make
+            zip
+      - name: Build
+        shell: C:\cygwin\bin\bash.exe -eo pipefail '{0}'
+        run: >-
+          export MAKEFLAGS=-j$(nproc) &&
+          make &&
+          zip byedpi-${{ matrix.arch }}-cygwin.zip ciadpi.exe
+      - name: Upload artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: byedpi-${{ matrix.arch }}-cygwin
+          path: byedpi-*.zip
+          if-no-files-found: error
+
   release:
-    needs: [ build-windows]
+    needs: [ build-linux, build-windows, build-cygwin ]
     permissions:
       contents: write
     env:
