--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,7 +10,7 @@ jobs:
     strategy:
       matrix:
         include:
-          - arch: arm64
+          - arch: aarch64
             tool: aarch64-unknown-linux-musl
           # - arch: arm
           #   tool: arm-unknown-linux-musleabi
@@ -50,7 +50,7 @@ jobs:
           #   tool: sh-multilib-linux-musl
           - arch: x86
             tool: i586-unknown-linux-musl
-          - arch: x86_64
+          - arch: x64
             tool: x86_64-unknown-linux-musl
     steps:
       - name: Checkout
